@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graphics.c,v 1.366 2011/05/09 21:45:14 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: graphics.c,v 1.367 2011/05/10 19:59:37 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - graphics.c */
@@ -2282,19 +2282,10 @@ finish_filled_curve(
 		points += 2;
 		break;
 	case FILLEDCURVES_ATX1:
-		corners[points].x   =
-		corners[points+1].x = map_x(filledcurves_options->at);
-		    /* should be mapping real x1axis/graph/screen => screen */
-		corners[points].y   = corners[points-1].y;
-		corners[points+1].y = corners[0].y;
-		for (i=0; i<points; i++)
-		    side += corners[i].x - corners[points].x;
-		points += 2;
-		break;
 	case FILLEDCURVES_ATX2:
 		corners[points].x   =
 		corners[points+1].x = map_x(filledcurves_options->at);
-		    /* should be mapping real x2axis/graph/screen => screen */
+		    /* should be mapping real x1/x2axis/graph/screen => screen */
 		corners[points].y   = corners[points-1].y;
 		corners[points+1].y = corners[0].y;
 		for (i=0; i<points; i++)
@@ -2302,19 +2293,10 @@ finish_filled_curve(
 		points += 2;
 		break;
 	case FILLEDCURVES_ATY1:
-		corners[points].y   =
-		corners[points+1].y = map_y(filledcurves_options->at);
-		    /* should be mapping real y1axis/graph/screen => screen */
-		corners[points].x   = corners[points-1].x;
-		corners[points+1].x = corners[0].x;
-		for (i=0; i<points; i++)
-		    side += corners[i].y - corners[points].y;
-		points += 2;
-		break;
 	case FILLEDCURVES_ATY2:
 		corners[points].y   =
 		corners[points+1].y = map_y(filledcurves_options->at);
-		    /* should be mapping real y2axis/graph/screen => screen */
+		    /* should be mapping real y1/y2axis/graph/screen => screen */
 		corners[points].x   = corners[points-1].x;
 		corners[points+1].x = corners[0].x;
 		for (i=0; i<points; i++)
